fix: outline when pad has focus on chrome

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             flex-grow: 1;
             width: 100%;
             overflow: auto;
+            outline: none;
             padding: 1em;
             border: 3px solid #c3c3c3;
         }
